2008-01-14  Callum McKenzie  <callum@spooky-possum.org>

	* modulesets/gnome-suites-2.22.modules: Add libgweather and make
	gnome-applets depend on it.

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.22.modules: add ndesk-dbus and
	ndesk-dbus-glib
	* modulesets/gnome-suites-2.22.modules: add ndesk-dbus and
	ndesk-dbus-glib dep for tomboy

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.22.modules: move mousetweaks to gnome-suites-2.22
	* modulesets/gnome-suites-2.22.modules: add mousetweaks (using GNOME
	svn now), add definition for git.freedesktop.org for swfdec-gnome

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.22.modules: remove swfdec* (swfdec-mozilla is
	still available in freedesktop.modules)
	* modulesets/gnome-external-deps-2.22.modules: add swfdec
	* modulesets/gnome-suites-2.22.modules: move swfdec-gnome here, even
	if it's not yet in GNOME svn.

2008-01-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.22.modules: move gtk-vnc to external dependencies
	move gdl and gnome-build to gnome suites
	* modulesets/gnome-external-deps-2.22.modules: add libxml2 and libxslt
	(was decided to move them from the platform to external deps at the
	beginning of the cycle), add gtk-vnc
	* modulesets/gnome-suites-2.22.modules: remove libxml2/libxslt,
	keep only one gnome-settings-daemon definition, remove libsexy dep for
	file-roller: it's not needed and libsexy is not a blessed dependency,
	add libgweather, reorder the devtools part and add gdl/gnome-build
	there

2008-01-13  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules: Added exempi and liboperaw.
	You need external libboost-test-dev to compile by now, I hope this
	could be removed in next future. Know issue: it seems you have to run
	autogen.sh then configure to build libopenraw, so it if fails, re-run
	configure phase in jhbuild. I hope this can be fixed too.
	