@@ -1,3 +1,8 @@
+2008-01-14  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/cvs.py, jhbuild/versioncontrol/svn.py: never
+	wipe dir in update mode  (see: #509365)
+
 2008-01-14  Callum McKenzie  <callum@spooky-possum.org>
 
 	* modulesets/gnome-suites-2.22.modules: Add libgweather and make
